# machine-learning-3

./: gutenberg_data.json  gutenberg_data2.json  gutenberg_data3.json  rogets_thesaurus.ipynb  rogets_thesaurus_classification.json
my_project/: pyproject.toml
